--- a/background/background.html
+++ b/background/background.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/default.css"/>
-    <title>Background Page</title>
-  </head>
+<head>
+  <meta charset="utf-8">
 
-  <body>
-   <div class="container content">
-   <h1>Background Page</h1>
-  <form>
-  Name: <input class="new-entry name" type="text" name="Name"><br>
-  Website URL: <input type="text" class="new-entry url" name="url"><br>
-  Username: <input type="text" class="new-entry username" name="username"><br>
-  Password: <input type="password" class="new-entry password" name="password">
-  
-</form> 
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/default.css"/>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/header.css">
+  <title>Background Page</title>
+</head>
 
-   <button class="button add">save entry</button>
-   
-   </div>
+<body>
 
-<script src="jquery-3.2.1.min.js"></script>
-<script src="main.js"></script>
-  <script src="credential_class.js"></script>
-  <script src="background.js"></script>
-  </body>
+  <header id="header" class="topbar-sticky-shrink-header">
+    <div class="row">
+      <h1>PWM Dashboard</h1>
+    </div>
+  </header>
+
+  <div data-sticky-container>
+    <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
+      <div class="top-bar topbar-sticky-shrink">
+        <div class="top-bar-title">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row content container" id="content">
+   <form>
+    <div class="row">
+      <div class="large-12 columns">
+        <label>Category</label>
+        <select>
+          <option value="husker">Husker</option>
+          <option value="starbuck">Starbuck</option>
+          <option value="hotdog">Hot Dog</option>
+          <option value="apollo">Apollo</option>
+        </select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="large-3 medium-4 columns">
+        <label>Category</label>
+        <input class="new-entry category" type="text" placeholder="large-4.columns" />
+      </div>
+      <div class="large-3 medium-4 columns">
+        <label>URL</label>
+        <input class="new-entry url" type="text" placeholder="large-4.columns" />
+      </div>
+      <div class="large-3 medium-4 columns">
+        <label>Username</label>
+        <input class="new-entry username" type="text" placeholder="large-4.columns" />
+      </div>
+      <div class="large-3 medium-4 columns">
+        <label>Password</label>
+        <input class="new-entry password" type="text" placeholder="large-4.columns" />
+      </div>
+    </div>
+    <div class="row">
+     <p><a href="#" class="button add">Save entry</a><br/>
+     </div>
+   </form>
+
+
+
+ </div>
+
+ <script src="jquery-3.2.1.min.js"></script>
+ <script src="main.js"></script>
+ <script src="credential_class.js"></script>
+ <script src="background.js"></script>
+ <script src="js/vendor/jquery.js"></script>
+ <script src="js/vendor/what-input.js"></script>
+ <script src="js/vendor/foundation.js"></script>
+ <script src="js/app.js"></script>
+</body>
 
 </html>
