add require.js; module storagemanager, entry

--- a/background/background.html
+++ b/background/background.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/header.css">
+
+ <script data-main="app" src="require.js"></script>
+
   <title>Background Page</title>
 </head>
 
@@ -74,8 +77,6 @@
  </div>
 
  <script src="jquery-3.2.1.min.js"></script>
- <script src="main.js"></script>
- <script src="credential_class.js"></script>
  <script src="background.js"></script>
  <script src="js/vendor/jquery.js"></script>
  <script src="js/vendor/what-input.js"></script>
