--- a/background/background.html
+++ b/background/background.html
@@ -7,80 +7,65 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/default.css"/>
-  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/header.css">
 
- <script data-main="app" src="require.js"></script>
+  <script data-main="app" src="require.js"></script>
 
   <title>Background Page</title>
 </head>
 
 <body>
+  <div class="container">
+    
+    <div id="categoryContainer"></div>
 
-  <header id="header" class="topbar-sticky-shrink-header">
-    <div class="row">
-      <h1>PWM Dashboard</h1>
-    </div>
-  </header>
-
-  <div data-sticky-container>
-    <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
-      <div class="top-bar topbar-sticky-shrink">
-        <div class="top-bar-title">
-
+    <div class="row content container" id="content">
+     <form>
+      <div class="row">
+        <div class="col-lg-12">
+          <label>Category</label>
+          <select>
+            <option value="husker">Husker</option>
+            <option value="starbuck">Starbuck</option>
+            <option value="hotdog">Hot Dog</option>
+            <option value="apollo">Apollo</option>
+          </select>
         </div>
-
       </div>
-    </div>
-  </div>
-
-
-  <div class="row content container" id="content">
-   <form>
-    <div class="row">
-      <div class="large-12 columns">
-        <label>Category</label>
-        <select>
-          <option value="husker">Husker</option>
-          <option value="starbuck">Starbuck</option>
-          <option value="hotdog">Hot Dog</option>
-          <option value="apollo">Apollo</option>
-        </select>
+      <div class="row">
+        <div class="col-lg-3">
+          <label>Category</label>
+          <input class="new-entry category" type="text" placeholder="large-4.columns" />
+        </div>
+        <div class="col-lg-3">
+          <label>URL</label>
+          <input class="new-entry url" type="text" placeholder="large-4.columns" />
+        </div>
+        <div class="col-lg-3">
+          <label>Username</label>
+          <input class="new-entry username" type="text" placeholder="large-4.columns" />
+        </div>
+        <div class="col-lg-3">
+          <label>Password</label>
+          <input class="new-entry password" type="text" placeholder="large-4.columns" />
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="large-3 medium-4 columns">
-        <label>Category</label>
-        <input class="new-entry category" type="text" placeholder="large-4.columns" />
-      </div>
-      <div class="large-3 medium-4 columns">
-        <label>URL</label>
-        <input class="new-entry url" type="text" placeholder="large-4.columns" />
-      </div>
-      <div class="large-3 medium-4 columns">
-        <label>Username</label>
-        <input class="new-entry username" type="text" placeholder="large-4.columns" />
-      </div>
-      <div class="large-3 medium-4 columns">
-        <label>Password</label>
-        <input class="new-entry password" type="text" placeholder="large-4.columns" />
-      </div>
-    </div>
-    <div class="row">
-     <p><a href="#" class="button add">Save entry</a><br/>
-     </div>
-   </form>
+      <div class="row">
+       <p><a href="#" class="button add">Save entry</a><br/>
+       </div>
+     </form>
 
 
 
+   </div>
  </div>
 
  <script src="jquery-3.2.1.min.js"></script>
  <script src="background.js"></script>
  <script src="js/vendor/jquery.js"></script>
- <script src="js/vendor/what-input.js"></script>
- <script src="js/vendor/foundation.js"></script>
+ <script src="js/bootstrap.js"></script>
  <script src="js/app.js"></script>
 </body>
 
