--- a/background/background.html
+++ b/background/background.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/mp.css"/>
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/mp.css"/>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/header.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,8 +15,8 @@
 <body>
 <nav class="navbar navbar-default navbar-fixed-top navbar-mp">
   <div class="container">
-     <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#modal-newEntry">New Entry</button>
-    <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#modalCategory">New Category</button>
+     <button type="button" class="btn-mp btn btn-primary navbar-btn" data-toggle="modal" data-target="#modal-newEntry">New Entry</button>
+    <button type="button" class="btn-mp btn btn-primary navbar-btn" data-toggle="modal" data-target="#modalCategory">New Category</button>
   </div>
 </nav>
    
