add FAB Button for primary action on background page

--- a/background/background.html
+++ b/background/background.html
@@ -8,28 +8,43 @@
   <link rel="stylesheet" href="css/mp.css"/>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/fab.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script data-main="app" src="scripts/requirejs/require.js"></script>
   <title>Background Page</title>
+
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top navbar-mp">
+  <div id="fab_wrapper">
+   <div class="water-drop"></div>
+   <div class="button button-floating"></div>
+   <div class="button-floating-shadow"></div>
+   <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><div class="text-center"><i class="material-icons">bookmark</i></div></div>
+   <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><div class="text-center"><i class="material-icons">class</i></div></div>
+ </div>
+
+
+ <nav class="navbar navbar-default navbar-fixed-top navbar-mp">
   <div class="container">
-     <button type="button" class="btn-mp btn btn-primary navbar-btn" data-toggle="modal" data-target="#modal-newEntry">New Entry</button>
-    <button type="button" class="btn-mp btn btn-primary navbar-btn" data-toggle="modal" data-target="#modalCategory">New Category</button>
+
   </div>
 </nav>
-   
-  
-  <div class="container">
-    <!-- Button trigger modal -->
 
-    <div class="row content container" id="content">
-     <div id="categoryContainer"></div>
+
+
+<div class="container">
+  <!-- Button trigger modal -->
+
+  <div class="row content container" id="content">
+   <div class="page-header">
+     <h1>Password Categories <small> organise your re-used passwords</small></h1>
    </div>
+   <div id="categoryContainer"></div>
+
  </div>
- <!-- Modal Category -->
- <div class="modal modal-mp fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+</div>
+<!-- Modal Category -->
+<div class="modal modal-mp fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -56,7 +71,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <button type="button" class="close btn-mp" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Add new entry</h4>
       </div>
       <div class="modal-body">
@@ -78,13 +93,14 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button id="addEntry" type="button" class="btn btn-primary">Save entry</button>
+      <button type="button" class="btn btn-default btn-mp" data-dismiss="modal">Close</button>
+      <button id="addEntry" type="button" class="btn btn-primary btn-mp">Save entry</button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 <script src="scripts/jquery/jquery.js"></script>
+<script src="scripts/fab.js"></script>
 <script src="scripts/background.js"></script>
 <script src="scripts/bootstrap/bootstrap.js"></script>
 <script src="app.js"></script>
