--- a/background/scripts/modules/ui/collapse_snippet.html
+++ b/background/scripts/modules/ui/collapse_snippet.html
@@ -6,7 +6,7 @@
         <h4 class="panel-title">
           <div class="row">
             <div class="col-lg-2">
-              <i id="cat-icon" class="material-icons">euro_symbol</i>
+              <i id="cat-icon" class="material-icons category_icons">euro_symbol</i>
             </div>
             <div class="col-lg-10 text-middle">
               <a id="_title_" href="#_listGroup_" class="" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="_listGroup_">TITLE</a> 
@@ -17,7 +17,7 @@
               Number Accounts: 0
             </div>
             <div class="col-lg-2">
-              <i class="material-icons">settings</i>
+              <i class="material-icons">lock_open</i>
             </div>
           </div>
         </h4>
