--- a/background/background.html
+++ b/background/background.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/fab.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script data-main="app" src="scripts/requirejs/require.js"></script>
-  <title>Background Page</title>
+  <title>Password Reuse Manager</title>
 
 </head>
 <body>
