--- a/background/scripts/modules/ui/category_snippet.html
+++ b/background/scripts/modules/ui/category_snippet.html
@@ -8,7 +8,7 @@
               <i id="cat-icon" class="material-icons category_icons">euro_symbol</i>
             </div>
             <div class="col-lg-10 text-middle">
-              <a id="_title_" href="#_listGroup_" class="" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="_listGroup_">TITLE</a> 
+              <span id="_title_" class="" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="_listGroup_">TITLE</span> 
             </div>
           </div>
           <div class="row">
