--- a/background/background.html
+++ b/background/background.html
@@ -57,14 +57,22 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">New Category</h4>
+       <h4 class="modal-title" id="myModalLabel">New Category</h4>
       </div>
       <div class="modal-body">
        <form>
         <div class="form-group">
           <label for="category-name">Category Name</label>
           <input type="text" class="form-control" id="modalCategoryName" placeholder="Category Name">
+        </div>
+        <div id="pw-hint">
+          <i class="material-icons hastext">lock_open</i><span>No password will be stored for this category and its entries.</span>
+        </div>
+        <a id="btnAddPWD">add password</a>
+
+        <div id="enter-category-pwd" class="form-group hidden">
+          <label for="category-pwd">Enter a Category Password</label>
+          <input type="text" class="form-control" id="category-pwd" placeholder="Password">
         </div>
       </form>
     </div>
@@ -80,7 +88,6 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close btn-mp" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Add new entry</h4>
       </div>
       <div class="modal-body">
