password (plain) storage for categories possible

--- a/background/scripts/modules/ui/category_snippet.html
+++ b/background/scripts/modules/ui/category_snippet.html
@@ -16,7 +16,7 @@
               Number Accounts: 0
             </div>
             <div class="col-lg-2">
-              <i class="material-icons">lock_open</i>
+              <i class="material-icons lock-icon">lock_open</i>
             </div>
           </div>
         </h4>
