--- a/background/background.html
+++ b/background/background.html
@@ -77,8 +77,14 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
-      <button id="addCategory" type="button" class="btn btn-primary btn-mp">Save</button>
+           <div id="modalAction">
+          <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
+          <button id="addCategory" type="button" class="btn btn-primary btn-mp">Save entry</button>
+        </div>
+        <div id="modalYesNo" class="hidden">
+          <button id="modalNo" type="button" class="btn btn-default btn-mp light">Cancel</button>
+          <button id="modalYes" type="button" class="btn btn-primary btn-mp" data-dismiss="modal">Confirm</button>
+        </div>
     </div>
   </div>
 </div>
@@ -134,6 +140,7 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
 <script src="scripts/jquery/jquery.js"></script>
 <script src="scripts/fab.js"></script>
 <script src="scripts/bootstrap/bootstrap.js"></script>
