logic fixes and chaos

--- a/background/background.html
+++ b/background/background.html
@@ -81,7 +81,7 @@
           <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
           <button id="addCategory" type="button" class="btn btn-primary btn-mp">Save entry</button>
         </div>
-        <div id="modalYesNo" class="hidden">
+        <div id="modalYesNo" class="hidden"><span>Are you sure you want to update this category?</span>
           <button id="modalNo" type="button" class="btn btn-default btn-mp light">Cancel</button>
           <button id="modalYes" type="button" class="btn btn-primary btn-mp" data-dismiss="modal">Confirm</button>
         </div>
