retrieve password + mpw gate working (plain texty)

--- a/background/background.html
+++ b/background/background.html
@@ -93,6 +93,24 @@
 </div>
 </div>
 
+<div class="modal modal-mp fade" id="modalMPW" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+     <div class="modal-body">
+       <form>
+        <div class="form-group">
+          <label for="category-name">Your Masterpassword</label>
+          <input type="text" class="form-control" id="modalInputMPW" placeholder="">
+        </div>
+        <div class="modal-hint">
+          <i class="material-icons hastext">help_outline</i><span><a href="#">Forgot your Masterpassword?</a></span>
+        </div>
+      </form>
+    </div>
+</div>
+</div>
+</div>
+
 <div id="modal-newEntry" class="modal modal-mp fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
