--- a/popup/login.html
+++ b/popup/login.html
@@ -35,7 +35,7 @@
     <input type="password" class="form-control" id="inputCreateMPW" placeholder="Your Masterpassword">
   </div>
   <div class="text-right">
-    <a class="btn btn-primary btn-mp">Next Step</a>
+    <a class="btn btn-primary btn-mp btn-mp-raise">Next Step</a>
   </div>
 </form>
 </div>
@@ -51,7 +51,7 @@
     <input type="password" class="form-control" id="inputConfirmMPW" placeholder="Re-type your Masterpassword">
   </div>
   <div class="text-right" style="margin-top: 85px">
-    <a class="btn btn-primary btn-mp">Let's Start</a>
+    <a class="btn btn-primary btn-mp btn-mp-raise">Let's Start</a>
   </div>
 </form>
 </div>
@@ -113,7 +113,7 @@
 <div class="slide last">
         <h2 class="text-center">You are ready to start!</h2>
         <div class="text-center">
-    <a id="btnOpenManager" class="btn btn-primary btn-mp">Open Manager</a>
+    <a id="btnOpenManager" class="btn btn-primary btn-mp btn-mp-raise">Open Manager</a>
   </div>
       </div>
 
