show / hide logic fixed

--- a/background/background.html
+++ b/background/background.html
@@ -99,8 +99,8 @@
      <div class="modal-body">
        <form>
         <div class="form-group">
-          <label for="category-name">Your Masterpassword</label>
-          <input type="text" class="form-control" id="modalInputMPW" placeholder="">
+          
+          <input type="text" class="form-control" id="modalInputMPW" placeholder="Enter Masterpassword">
         </div>
         <div class="modal-hint">
           <i class="material-icons hastext">help_outline</i><span><a href="#">Forgot your Masterpassword?</a></span>
