popup retrieves current url

--- a/popup/popup_simple.html
+++ b/popup/popup_simple.html
@@ -10,10 +10,10 @@
 <body>
  <div class="container">
    <div class="head">
-   <h3>more coming soon</h3>
+   <p id="thisURL">halo</p>
    </div>
    <div class="footer">
-     <p class="popup">Open Manager</p>
+     <p class="link popup">Open Manager</p>
    </div>
 
  </div>
